[package]
name = "actixdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.186", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
femme = "2.2.1"

